k8s/k8s-manifest.yaml
# ===========================
# 1. Backend (데이터 저장소)
# ===========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        sidecar.istio.io/inject: "true" # Istio 사이드카 강제 주입
    spec:
      serviceAccountName: backend-sa
      containers:
        - name: backend
          image: minsoo-app:v1 # 사용할 이미지 이름
          imagePullPolicy: Never # 로컬 이미지를 사용 (다운로드 X)
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 8080

---
# ===========================
# 2. Frontend (사용자 접속용)
# ===========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        sidecar.istio.io/inject: "true" # Istio 사이드카 강제 주입
    spec:
      serviceAccountName: frontend-sa
      containers:
        - name: frontend
          image: minsoo-app:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer # 외부 접속 허용
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 8080
